<resources>
    <string name="app_name">LoginApp</string>
    <!-- TELA DE LOGIN -->>
    <string name="text_user">Email:</string>
    <string name="text_password">Senha:</string>
    <string name="placeholder_user">Digite seu email...</string>
    <string name="placeholder_password">Digite sua senha...</string>
    <string name="button_text_login">Login</string>
    <string name="button_register">Cadastrar</string>

    <!-- TELA DE REGISTRO -->
    <string name="text_name">Nome</string>
    <string name="edtName">Nome</string>
    <string name="label_email">Email</string>
    <string name="input_email">Digite seu email...</string>
    <string name="input_name">Digite seu nome...</string>
    <string name="input_name_text">Digite seu nome...</string>
    <string name="input_email_text">Digite seu email...</string>
    <string name="label_password">Senha</string>
    <string name="input_password_text">Digite sua senha...</string>
    <string name="calculate_square">Calcular Quadrado</string>
    <string name="calculate_area">Calcular Area</string>
    <string name="number_one">Número 1:</string>
    <string name="type_number_one">Digite o número 1...</string>
    <string name="type_number1">Digite o número 1...</string>
    <string name="number_two">Número 2:</string>
    <string name="type_number2">Digite o número 2...</string>
    <string name="calculate">Calcular</string>
    <string name="multi_here">Multiplique aqui:</string>
    <string name="calc_multi">Calculadora Multiplicação</string>
    <string name="calc_multi_2">Calculadora Multiplicação</string>

    <!-- SquareActivity -->
    <string name="enter_both_numbers">Por favor, insira ambos os números</string>
    <string name="invalid_number_format">Formato de número inválido</string>
    <string name="result_format">Resultado: %.2f</string>
    <string name="type_side1">Informe o Lado 1...</string>
    <string name="type_side2">Informe o lado 2...</string>
    <string name="calc_area">Calcule Áreas aqui:</string>

    <!-- AreaActivity -->
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="positive_values_required">Valores devem ser positivos</string>
    <string name="square_area_result">Área do quadrado: %.2f</string>
    <string name="rectangle_area_result">Área do retângulo: %.2f</string>
    <string name="side1">Lado 1:</string>
    <string name="side2">Lado 2:</string>
    <string name="type_number_2">Digite o número 2...</string>

</resources>